--- a/Domain/nlog.config
+++ b/Domain/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="f:Code\repos\Portfolio\internal_logs\internallog.txt">
+      internalLogFile="internal_logs/internallog.txt">
 	<targets>
 		<target name="logfile" xsi:type="File"
 				fileName="logs/${shortdate}_logfile.txt"
