--- a/Domain/appsettings.json
+++ b/Domain/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=host.docker.internal;user=root;password=Mihau69Pedau!;database=portfolio;"
+    "connectionString": "server=host.docker.internal;user=root;password=devroot;database=portfolio;"
   },
   "AllowedHosts": "*",
   "JwtIssuerOptions": {
